# pdm-copier

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  README.md  copier.yml  pyproject.toml  task.py
pdm_copier/: check_changelog.py
pre_commit_hooks/: update_changelog.py
project/: .gitlab-ci.yml.jinja  .pre-commit-config.yaml  CHANGELOG.md  LICENSE.jinja  README.md.jinja  pdm_build.py  pyproject.toml.jinja  {% if use_c_extension %}pdm_build.py{% endif %}.jinja
project/src/{{python_package_import_name}}/: __init__.py.jinja  hellomodule.cpp
project/tests/: coverage.conf.jinja  test_extension.py.jinja  test_fibonacci.py.jinja  test_init.py.jinja
project/{{python_package_import_name}}/: __init__.py.jinja
{{project_name}}/: .gitignore  README.md.jinja  pyproject.toml.jinja
{{project_name}}/tests/: coverage.conf.jinja
{{project_name}}/{{project_name}}/: __init__.py.jinja
